Added APN Support, Notif Screen

--- a/Thred/GoogleService-Info.plist
+++ b/Thred/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>628658827719-umsvdpdcpp3dt2qc877pdehlahilekmj.apps.googleusercontent.com</string>
+	<string>628658827719-j522atbbl9ta0lm3ro1hquoshlo1u2h3.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.628658827719-umsvdpdcpp3dt2qc877pdehlahilekmj</string>
+	<string>com.googleusercontent.apps.628658827719-j522atbbl9ta0lm3ro1hquoshlo1u2h3</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBx7YVDqppCHsWlBoz9fwHn_QUynKLG0QY</string>
 	<key>GCM_SENDER_ID</key>
@@ -19,17 +19,17 @@
 	<key>STORAGE_BUCKET</key>
 	<string>clothingapp-ed125.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:628658827719:ios:baa3a8291cdfbad28029e2</string>
+	<string>1:628658827719:ios:b32fce57b75adbfe8029e2</string>
 	<key>DATABASE_URL</key>
 	<string>https://clothingapp-ed125.firebaseio.com</string>
 </dict>
