--- a/Thred/Info.plist
+++ b/Thred/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string></string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -18,16 +20,26 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Need Camera Plz</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need Photos Plz</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>HOPE-HYPE.ttf</string>
 		<string>Nexa W01 Heavy.ttf</string>
 		<string>akaDora.ttf</string>
 	</array>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -47,11 +59,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>Need Camera Plz</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Need Photos Plz</string>
-	<key>CFBundleDisplayName</key>
-	<string></string>
 </dict>
 </plist>
