--- a/Thred/ThredDebug.entitlements
+++ b/Thred/ThredDebug.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:thredapps.com</string>
+		<string>applinks:thred.thredapps.com</string>
 	</array>
 </dict>
 </plist>
