--- a/Thred/Info.plist
+++ b/Thred/Info.plist
@@ -74,6 +74,9 @@
 		<string>Arang-2ODRv.otf</string>
 		<string>Hacked-KerX.ttf</string>
 		<string>BasicFontRegular-GOOlD.ttf</string>
+		<string>Smaragd-Alternate.otf</string>
+		<string>OPTIRadiant-Medium.otf</string>
+		<string>Cinzel-Bold.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
